--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,57 @@ nav ul {
     position: absolute;
     left: -1000px;
 }
+.flex-container {
+  padding: 5px 5px 5px 5px;
+  margin: 5px 5px 5px 5px;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+}
+
+.flex-item {
+  /*background: tomato;*/
+  padding: 5px;
+  width: 30%;
+  height: 400px;
+  margin-top: 5px;
+  
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+body,html {
+  padding: 0;
+  margin: 10;
+}
+
+.wrapper {
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr; 
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+ 
+}
+
+.item {
+
+  /*border: 1px white;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /*font-size: 70px;*/
+  color: white;
+  /*min-height: 150px;*/
+  padding: 2%;
+}
