--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,39 @@ h1 {
     font-size: 25px;
     font-family: 'Special Elite', serif;
   	font-size: 48px;
-  	text-shadow: 4px 4px 4px #aaa;
+  	/*text-shadow: 4px 4px 4px #aaa;*/
 }
 }
 h2 {
-    font-size: 20px;
+    font-size: 30px;
 }
 ul {
     list-style:none;
 }
+nav{
+	margin: 5px 5px 5px 0px;
+}
 nav ul {
     text-transform: uppercase;
+    color: white;
+    list-style-type: none;
+  	margin: 0;
+ 	padding: 5px 5px 5px 5px;
+ 	width: 200px;
+  	background-color: #f1f1f1;
 
+}
+li a{
+	color: black;
+}
+li a:hover{
+	color: red;
+}
+li a:visited{
+	color: gray;
+}
+header p{
+	color: black;
 }
 
 
@@ -29,6 +50,7 @@ nav ul {
 	position: absolute;
     left: 200px;
     margin: 5px;
+    color: white;
 }
 .flex-container {
   padding: 5px 5px 5px 5px;
@@ -42,23 +64,25 @@ nav ul {
   display: flex;
   
   -webkit-flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   align-content: center;
+  /*background: white;*/
 }
 
 .flex-item {
   /*background: tomato;*/
-  padding: 5px;
+  padding: 15px;
   width: 30%;
-  height: 400px;
+  height: 100px;
   margin-top: 5px;
+
   
-  line-height: 150px;
-  color: white;
-  font-weight: bold;
-  font-size: 3em;
-  text-align: center;
+  /*line-height: 20px;*/
+  color: black;
+  /*font-weight: bold;*/
+  font-size: 12pt;
+  text-align: flex-start;
 }
 body,html {
   padding: 0;
@@ -89,8 +113,16 @@ img.galleryitem{
 	width: 300px;
 
 }
-body {
- background-image: url("/images/graffiti_banner.jpg");
+div.flex-container img{
+	width: 100px;
+}
+div.flex-container p{
+	background-color: white;
+}
+header {
+
+ 	background-image: url("../images/graffiti_banner.jpg");
+ 	height: 300px;
 }
 
 
